--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,10 @@
 {
+  "parser": "babel-eslint",
   "extends": "airbnb",
+  "env": {
+      "browser": true,
+      "es6": true
+  },
   "rules": {
     "no-console": "error", // airbnb is using warn
     "no-return-assign": "off", // airbnb use error, handy for react ref assign.
