--- a/package.json
+++ b/package.json
@@ -7,21 +7,28 @@
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack --config webpack.config.prod.js",
-    "serve": "serve dist"
+    "serve": "serve dist",
+    "lint": "eslint src"
   },
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
     "babel-core": "^6.23.1",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
