--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "prop-types": "^15.6.1",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react-dom": "^16.3.0",
+    "react-hot-loader": "^4.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
@@ -36,7 +38,6 @@
     "postcss-loader": "^2.1.3",
     "prettier": "^1.11.1",
     "react-dev-utils": "^5.0.1",
-    "react-hot-loader": "^4.0.1",
     "sass-loader": "^6.0.7",
     "serve": "^6.5.3",
     "style-loader": "^0.20.3",
