--- a/sample_app/.eslintrc
+++ b/sample_app/.eslintrc
@@ -13,6 +13,12 @@
     "react/jsx-filename-extension": ["error", {"extensions": [".js"]}], // airbnb is using .jsx
     "react/jsx-max-props-per-line": ["error", {"maximum": 3}], // airbnb is disabling this rule
     "react/no-danger": "error", // airbnb is using warn
-    "react/no-direct-mutation-state": "error" // airbnb is disabling this rule
+    "react/no-direct-mutation-state": "error", // airbnb is disabling this rule
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "no-param-reassign": "off",
+    "react/forbid-prop-types": "off",
+    "import/no-unresolved": "off",
+    "import/extensions": "off",
   }
 }
